--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -31,11 +31,26 @@
         </div>
       
         <div class="w3-display-middle">
-          <h1 class="w3-jumbo w3-animate-top">Joshua Zanoria</h1>
+          <h1 class="w3-jumbo w3-animate-top"><span class="shining">Joshua*Zanoria</span></h1>          
           <hr class="w3-border-grey" style="margin:auto;width:40%">
           <p class="w3-large w3-center">Software Engineer</p>
         </div>
+
       </div>
+
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=2208188616117274&autoLogAppEvents=1';
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+
+  <div class="fb-comments" data-href="https://zanoria04.github.io/A-Fis-API-Project/afis_api_project/" data-numposts="5"></div>
+
+
 
 </body>
 
