fixing and redesigning the nav bar

--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -20,15 +20,15 @@
 
 <body>
     
-    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
 
 <!------------- Nav Section --------------->
 
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white"></div>
         <div class="w3-display-topright w3-padding-large w3-xlarge">
-          <ul>
-            <a href="https://www.instagram.com/j0shua_j0shua/" class="fa fa-instagram" style="font-size:30px" target="_blank"></a>
-            <a href="https://www.linkedin.com/in/joshua-zanoria-200aa7131/" target="_blank" class="fa fa-linkedin-square" style="font-size:30px"></a>
-            <a href="https://github.com/zanoria04" class="fa fa-github" style="font-size:30px" target="_blank"></a>
+          <ul class="nav">
+            <a href="https://www.instagram.com/j0shua_j0shua/" class="fa fa-instagram" style="font-size:30px" target="_blank"><span>Instagram</span></a>
+            <a href="https://www.linkedin.com/in/joshua-zanoria-200aa7131/" target="_blank" class="fa fa-linkedin-square" style="font-size:30px"><span>LinkedIn</span></a>
+            <a href="https://github.com/zanoria04" class="fa fa-github" style="font-size:30px" target="_blank"><span>Github</span></a>
           </ul>
         </div>
 
@@ -38,7 +38,7 @@
         <div class="w3-display-middle">
           <h1 class="w3-jumbo w3-animate-top"><span class="shining">Joshua*Zanoria</span></h1>          
           <hr class="w3-border-grey" style="margin:auto;width:40%">
-          <p class="w3-large w3-center">Software Engineer</p>
+          <p class="w3-large w3-center" style="color: #C0C0C0">Software Engineer</p>
         </div>
 
       </div>
