--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -106,12 +106,32 @@
       fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="w3-container" style="padding-top: 100px;">
+<div class="w3-container">
   <div class="w3-center">
     <div class="fb-comments" data-href="https://zanoria04.github.io/A-Fis-API-Project/afis_api_project/" data-numposts="5"></div>
   </div>
 </div>
 
+
+<!------------- My location Section --------------->
+
+<div id="map"></div>
+
+<script>
+    function initMap() {
+        var location = {lat: 10.327970, lng: 123.941109};
+        var map = new google.maps.Map(document.getElementById("map"), {
+            zoom: 4,
+            center: location
+        });
+        var marker = new google.maps.Marker({
+            position: location,
+            map: map
+        });
+    }
+</script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABcrULb_SUOfG152tcslii_rahCxV_jF8&callback=initMap"></script>
 
 </body>
 
