--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -113,9 +113,34 @@
 </div>
 
 
-<!------------- My location Section --------------->
+<!------------- My location and Contact Section --------------->
 
-<div id="map"></div>
+
+
+<!-- Contact Section -->
+<div class="w3-container w3-light-grey" style="padding:100px 16px">
+  <h3 class="w3-center">CONTACT</h3>
+  <p class="w3-center w3-large">Lets get in touch. Send me a message.</p>
+  <div class="w3-row-padding" style="margin-top:100px">
+    <div class="w3-center w3-half">
+          <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Cebu, Philippines</p>
+       <br>
+          <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +63 9452267153</p>
+       <br>
+          <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: zanoriajoshua@gmail.com</p>
+       <br>
+    </div>
+
+<!-- Google Maps Section -->
+    <div class="w3-half">
+      <div id="map" style="width:100%;height:410px;"></div>
+    </div>
+
+  </div>
+</div>
+
+
+  <!-- <div id="map"></div> -->
 
 <script>
     function initMap() {
@@ -132,6 +157,14 @@
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABcrULb_SUOfG152tcslii_rahCxV_jF8&callback=initMap"></script>
+
+
+<!------------- Footer Section --------------->
+
+<!--
+<footer>
+  <p>Joshua Gwapo!</p>
+</footer> -->
 
 </body>
 
