experimenting some cool stuffs!

--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -51,25 +51,25 @@
 
     <div class="w3-row-padding w3-center" style="margin-top:64px">
       <div class="w3-quarter">
-        <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
+        <span class="cool-stuff"><i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i></span>
         <p class="w3-large">Responsive</p>
         <p>Designing for the best experience for all users. Web pages that can be viewed using many different devices: desktops, tablets, and phones. I do always believe, your web page should look good, and be easy to use, regardless of the device.</p>
       </div>
 
       <div class="w3-quarter">
-        <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
+        <span class="cool-stuff"><i class="fa fa-heart w3-margin-bottom w3-jumbo"></i></span>
         <p class="w3-large">Passion</p>
         <p>At this point in my career, I am absolutely passionate learning about Software development, and plan to work towards greater expertise leveraging its capabilities. I have become more attuned to the need for adherence to established RWD (Responsive Web Design), and want to better familiarize myself with them, in an effort to better exploit their capabilities given an opportunity.</p>
       </div>
 
       <div class="w3-quarter">
-        <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
+        <span class="cool-stuff"><i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i></span>
         <p class="w3-large">Design</p>
         <p>Having an attractive and well-design website for your business creates opportunity to influence people's mind-set & help to generate more sales. Your website deserves the best; after all, it is the internet advertising billboard for you and your company.</p>
       </div>
 
       <div class="w3-quarter">
-        <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
+        <span class="cool-stuff"><i class="fa fa-cog w3-margin-bottom w3-jumbo"></i></span>
         <p class="w3-large">Support</p>
         <p>When I think about great service, it's about how you take every interaction you have with the customer and use that as a way to improve their perception of your organization.</p>
       </div>
