--- a/afis_api_project/index.html
+++ b/afis_api_project/index.html
@@ -118,7 +118,7 @@
 
 
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:100px 16px">
+<div class="w3-container w3-black" style="padding:100px 16px">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Lets get in touch. Send me a message.</p>
   <div class="w3-row-padding" style="margin-top:100px">
